--- a/KnowledgeAPI.postman_collection.json
+++ b/KnowledgeAPI.postman_collection.json
@@ -1,9 +1,10 @@
 {
 	"info": {
-		"_postman_id": "304905fc-e114-44ba-82ba-a80364e87dec",
+		"_postman_id": "f5f68605-997f-48e8-8c86-d8f612247f7b",
 		"name": "KnowledgeAPI",
 		"schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
-		"_exporter_id": "30999095"
+		"_exporter_id": "16738596",
+		"_collection_link": "https://api-test-fullstack-vn.postman.co/workspace/LINEBot~6c7d3726-b633-4731-ada8-822fea1a6b4d/collection/16738596-f5f68605-997f-48e8-8c86-d8f612247f7b?action=share&source=collection_link&creator=16738596"
 	},
 	"item": [
 		{
@@ -43,7 +44,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\r\n    \"search\":\"Folder\",\r\n    \"page\":2\r\n}",
+							"raw": "",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -51,19 +52,26 @@
 							}
 						},
 						"url": {
-							"raw": "http://127.0.0.1:8000/api/folder/",
+							"raw": "http://localhost:8000/api/folder/?search=&page=1",
 							"protocol": "http",
 							"host": [
-								"127",
-								"0",
-								"0",
-								"1"
+								"localhost"
 							],
 							"port": "8000",
 							"path": [
 								"api",
 								"folder",
 								""
+							],
+							"query": [
+								{
+									"key": "search",
+									"value": ""
+								},
+								{
+									"key": "page",
+									"value": "1"
+								}
 							]
 						}
 					},
@@ -110,7 +118,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\r\n    \"id\":1,\r\n    \"name\":\"New Folder 1\"\r\n}",
+							"raw": "{\r\n    \"id\":3,\r\n    \"name\":\"New Folder 1\"\r\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -144,7 +152,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\r\n    \"id\":1\r\n}",
+							"raw": "",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -152,7 +160,7 @@
 							}
 						},
 						"url": {
-							"raw": "http://127.0.0.1:8000/api/folder/delete/",
+							"raw": "http://127.0.0.1:8000/api/folder/delete/?id=3",
 							"protocol": "http",
 							"host": [
 								"127",
@@ -166,6 +174,12 @@
 								"folder",
 								"delete",
 								""
+							],
+							"query": [
+								{
+									"key": "id",
+									"value": "3"
+								}
 							]
 						}
 					},
@@ -186,13 +200,13 @@
 							"formdata": [
 								{
 									"key": "id_folder",
-									"value": "3",
+									"value": "7",
 									"type": "text"
 								},
 								{
 									"key": "file",
 									"type": "file",
-									"src": "postman-cloud:///1ef87e25-5546-4e50-840b-4e0b5b4f7f3d"
+									"src": "/C:/Users/ADMIN/Downloads/Knowledge Advanced/Knowledge_Advanced/knowledgeGraph/Note.txt"
 								}
 							]
 						},
@@ -218,15 +232,12 @@
 				},
 				{
 					"name": "GetFileById",
-					"protocolProfileBehavior": {
-						"disableBodyPruning": true
-					},
 					"request": {
-						"method": "GET",
+						"method": "POST",
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\r\n    \"id\":3\r\n}",
+							"raw": "{\r\n    \"id\": 10\r\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -254,15 +265,12 @@
 				},
 				{
 					"name": "FindFile",
-					"protocolProfileBehavior": {
-						"disableBodyPruning": true
-					},
 					"request": {
-						"method": "GET",
+						"method": "POST",
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\r\n    \"search\":\"note\",\r\n    \"page\":1\r\n}",
+							"raw": "{\r\n    \"search\": \"\",\r\n    \"page\": 1,\r\n    \"id_folder\": null\r\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -295,7 +303,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\r\n    \"id\":5,\r\n    \"name\":\"new file\"\r\n}",
+							"raw": "{\r\n    \"id\":6,\r\n    \"name\":\"new file zzzzzzzz\"\r\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -329,7 +337,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\r\n    \"id\":4\r\n}",
+							"raw": "{\r\n    \"id\":6\r\n}",
 							"options": {
 								"raw": {
 									"language": "json"
