--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "cypress": "^13.15.0",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "nodemon": "^3.1.0"
