--- a/KnowledgeAPI.postman_collection.json
+++ b/KnowledgeAPI.postman_collection.json
@@ -1,10 +1,9 @@
 {
 	"info": {
-		"_postman_id": "f5f68605-997f-48e8-8c86-d8f612247f7b",
+		"_postman_id": "304905fc-e114-44ba-82ba-a80364e87dec",
 		"name": "KnowledgeAPI",
 		"schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
-		"_exporter_id": "16738596",
-		"_collection_link": "https://api-test-fullstack-vn.postman.co/workspace/LINEBot~6c7d3726-b633-4731-ada8-822fea1a6b4d/collection/16738596-f5f68605-997f-48e8-8c86-d8f612247f7b?action=share&source=collection_link&creator=16738596"
+		"_exporter_id": "30999095"
 	},
 	"item": [
 		{
@@ -13,7 +12,7 @@
 				{
 					"name": "GetAllFolder",
 					"request": {
-						"method": "GET",
+						"method": "POST",
 						"header": [],
 						"url": {
 							"raw": "http://127.0.0.1:8000/api/folder/",
@@ -36,26 +35,17 @@
 				},
 				{
 					"name": "FindFolder",
-					"protocolProfileBehavior": {
-						"disableBodyPruning": true
-					},
 					"request": {
 						"method": "GET",
 						"header": [],
-						"body": {
-							"mode": "raw",
-							"raw": "",
-							"options": {
-								"raw": {
-									"language": "json"
-								}
-							}
-						},
 						"url": {
-							"raw": "http://localhost:8000/api/folder/?search=&page=1",
+							"raw": "http://127.0.0.1:8000/api/folder/?search=&page=1",
 							"protocol": "http",
 							"host": [
-								"localhost"
+								"127",
+								"0",
+								"0",
+								"1"
 							],
 							"port": "8000",
 							"path": [
@@ -83,13 +73,19 @@
 						"method": "POST",
 						"header": [],
 						"body": {
-							"mode": "raw",
-							"raw": "{\r\n    \"name\": \"xyz\"\r\n}",
-							"options": {
-								"raw": {
-									"language": "json"
+							"mode": "formdata",
+							"formdata": [
+								{
+									"key": "name",
+									"value": "new folder 1",
+									"type": "text"
+								},
+								{
+									"key": "id_parent",
+									"value": "135",
+									"type": "text"
 								}
-							}
+							]
 						},
 						"url": {
 							"raw": "http://127.0.0.1:8000/api/folder/add/",
@@ -117,13 +113,25 @@
 						"method": "PUT",
 						"header": [],
 						"body": {
-							"mode": "raw",
-							"raw": "{\r\n    \"id\":3,\r\n    \"name\":\"New Folder 1\"\r\n}",
-							"options": {
-								"raw": {
-									"language": "json"
+							"mode": "formdata",
+							"formdata": [
+								{
+									"key": "id",
+									"value": "9",
+									"type": "text"
+								},
+								{
+									"key": "name",
+									"value": "New folder 10",
+									"type": "text",
+									"disabled": true
+								},
+								{
+									"key": "id_parent",
+									"value": "10",
+									"type": "text"
 								}
-							}
+							]
 						},
 						"url": {
 							"raw": "http://127.0.0.1:8000/api/folder/update/",
@@ -150,17 +158,8 @@
 					"request": {
 						"method": "DELETE",
 						"header": [],
-						"body": {
-							"mode": "raw",
-							"raw": "",
-							"options": {
-								"raw": {
-									"language": "json"
-								}
-							}
-						},
 						"url": {
-							"raw": "http://127.0.0.1:8000/api/folder/delete/?id=3",
+							"raw": "http://127.0.0.1:8000/api/folder/delete/?id=116",
 							"protocol": "http",
 							"host": [
 								"127",
@@ -178,7 +177,7 @@
 							"query": [
 								{
 									"key": "id",
-									"value": "3"
+									"value": "116"
 								}
 							]
 						}
@@ -200,13 +199,13 @@
 							"formdata": [
 								{
 									"key": "id_folder",
-									"value": "7",
+									"value": "9",
 									"type": "text"
 								},
 								{
 									"key": "file",
 									"type": "file",
-									"src": "/C:/Users/ADMIN/Downloads/Knowledge Advanced/Knowledge_Advanced/knowledgeGraph/Note.txt"
+									"src": "postman-cloud:///1ef87e25-5546-4e50-840b-4e0b5b4f7f3d"
 								}
 							]
 						},
@@ -236,13 +235,14 @@
 						"method": "POST",
 						"header": [],
 						"body": {
-							"mode": "raw",
-							"raw": "{\r\n    \"id\": 10\r\n}",
-							"options": {
-								"raw": {
-									"language": "json"
+							"mode": "formdata",
+							"formdata": [
+								{
+									"key": "id",
+									"value": "79",
+									"type": "text"
 								}
-							}
+							]
 						},
 						"url": {
 							"raw": "http://127.0.0.1:8000/api/file/",
@@ -266,19 +266,10 @@
 				{
 					"name": "FindFile",
 					"request": {
-						"method": "POST",
+						"method": "GET",
 						"header": [],
-						"body": {
-							"mode": "raw",
-							"raw": "{\r\n    \"search\": \"\",\r\n    \"page\": 1,\r\n    \"id_folder\": null\r\n}",
-							"options": {
-								"raw": {
-									"language": "json"
-								}
-							}
-						},
 						"url": {
-							"raw": "http://127.0.0.1:8000/api/file/",
+							"raw": "http://127.0.0.1:8000/api/file/?id_folder=3&search&page=1",
 							"protocol": "http",
 							"host": [
 								"127",
@@ -291,6 +282,20 @@
 								"api",
 								"file",
 								""
+							],
+							"query": [
+								{
+									"key": "id_folder",
+									"value": "3"
+								},
+								{
+									"key": "search",
+									"value": null
+								},
+								{
+									"key": "page",
+									"value": "1"
+								}
 							]
 						}
 					},
@@ -302,13 +307,24 @@
 						"method": "PUT",
 						"header": [],
 						"body": {
-							"mode": "raw",
-							"raw": "{\r\n    \"id\":6,\r\n    \"name\":\"new file zzzzzzzz\"\r\n}",
-							"options": {
-								"raw": {
-									"language": "json"
+							"mode": "formdata",
+							"formdata": [
+								{
+									"key": "id",
+									"value": "79",
+									"type": "text"
+								},
+								{
+									"key": "name",
+									"value": "new file 1",
+									"type": "text"
+								},
+								{
+									"key": "id_folder",
+									"value": "10",
+									"type": "text"
 								}
-							}
+							]
 						},
 						"url": {
 							"raw": "http://127.0.0.1:8000/api/file/update/",
@@ -335,17 +351,8 @@
 					"request": {
 						"method": "DELETE",
 						"header": [],
-						"body": {
-							"mode": "raw",
-							"raw": "{\r\n    \"id\":6\r\n}",
-							"options": {
-								"raw": {
-									"language": "json"
-								}
-							}
-						},
 						"url": {
-							"raw": "http://127.0.0.1:8000/api/file/delete/",
+							"raw": "http://127.0.0.1:8000/api/file/delete/?id=73",
 							"protocol": "http",
 							"host": [
 								"127",
@@ -359,6 +366,12 @@
 								"file",
 								"delete",
 								""
+							],
+							"query": [
+								{
+									"key": "id",
+									"value": "73"
+								}
 							]
 						}
 					},
